nextcloud/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud
    role: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
      role: db
  template:
    metadata:
      labels:
        app: nextcloud
        role: db
    spec:
      serviceAccountName: nextcloud-db-sa
      securityContext:
        fsGroup: 999
      containers:
      - name: nextcloud-db
        image: mariadb:12.3.2
        securityContext:
          runAsUser: 999
          runAsGroup: 999
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: nextcloud-db
          mountPath: /var/lib/mysql
      volumes:
      - name: nextcloud-db
        persistentVolumeClaim:
          claimName: nextcloud-db-pvc
