nextcloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.yourdomain.com`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
      middlewares:
        - name: nextcloud-headers
  tls:
    certResolver: le
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: nextcloud
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
